[Add] font grey color

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
       </div>
       <hr class="my-4" />
       <div>
-        <div class="text-sm">Total this month</div>
+        <div class="text-sm text-slate-500">Total this month</div>
         <div class="flex justify-between">
           <div class="text-5xl">$478.33</div>
           <div>
-            <div class="text-right">+2.4%</div>
-            <div class="text-right">from last month</div>
+            <div class="text-right font-bold">+2.4%</div>
+            <div class="text-right text-slate-500">from last month</div>
           </div>
         </div>
       </div>
