--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <img src="./images/logo.svg" alt="logo">
       </div>
     </div>
-    <div class="bg-paleOrange p-8 mt-4">
+    <div class="bg-paleOrange p-8 mt-4 rounded-2xl">
       <div class="text-3xl text-darkBrown">Spending - Last 7 days</div>
       <div>
         <canvas id="chart"></canvas>
